Fixed spacing on message dividers

--- a/XposeRAW.theme.css
+++ b/XposeRAW.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"XposeRAW","description":"Custom theme","author":"PseudoResonance","version":"2.9.6"}*//
+//META{"name":"XposeRAW","description":"Custom theme","author":"PseudoResonance","version":"2.9.7"}*//
 
 :root {
 	--background-screen-cover: 0, 0, 0; /* Color of screen over background */
@@ -7,7 +7,7 @@
 }
 
 body {
-	--version: "v2.9.6";
+	--version: "v2.9.7";
 	--message-spacing:1.0625rem;
 	--header-height:1.375rem;
 }
@@ -570,7 +570,7 @@ code.inline {
 	width:100%;
 	margin-left:0;
 	border:none;
-	height:calc(var(--message-spacing) * 1.5);
+	height:calc(var(--message-spacing) * 1.5) !important;
 }
 
 .messages-3amgkR .divider-3_HH5L span {
@@ -581,7 +581,7 @@ code.inline {
 	text-align:center;
 	font-size:14px;
 	line-height:22px;
-	height:calc(var(--message-spacing) * 2);
+	height:calc(var(--message-spacing) * 2) !important;
 	left:1rem;
 	right:0.875rem;
 	position:absolute;
@@ -602,6 +602,12 @@ code.inline {
 
 .messages-3amgkR .divider-3_HH5L.isUnread-3Ef-o9 span:nth-child(2) {
 	display:none;
+}
+
+/* Spacing correction */
+.group-spacing-16 .divider-3_HH5L.hasContent-1_DUdQ {
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 /* New message color */
